--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiHSLunar.cfg
@@ -34,6 +34,8 @@ PART
 	breakingForce = 72
 	breakingTorque = 72
 	crashTolerance = 18
+	maxTemp = 2400
+	skinMaxTemp = 3600
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
