--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHSLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiHSLunar.cfg
@@ -4,4 +4,6 @@
 	@title = Gemini Lunar Heatshield
 	@description = Improved, lunar rated heatshield for the Gemini Capsule. Can be switched to the Gemini B configuration with a hatch
 	@heatShieldTag = Lunar
+	@maxTemp = 2400
+	@skinMaxTemp = 3600
 }
