--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHSBlockIII+.cfg
@@ -1,14 +1,12 @@
 PART
 {
-
 	name = ROC-ApolloHSBlockIII+
 	module = Part
 	author = CobaltWolf, capkirk
 
 	RSSROConfig = True
 
-
-	MODEL // Model for the Heat Shield
+	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/Apollo/HeatShield
 		scale = 1.0, 1.0, 1.0
@@ -37,7 +35,6 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-
 	mass = 0.050
 	dragModelType = default
 	maximum_drag = 0.2
@@ -49,10 +46,7 @@ PART
 	fuelCrossFeed = False
 	stageOffset = 1
 	childStageOffset = 1
-	thermalMassModifier = 1.0
 	bulkheadProfiles = size1p2
-
-	tags = apollo heat shield heatshield reentry
 
 	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter = 3.91
@@ -62,7 +56,6 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-
 }
 
 // Specific adjustments after default setup
