Correct MM patching order, missing newlines

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBlockIII+.cfg
@@ -636,7 +636,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-ApolloCMBlockIII]:FOR[RealismOverhaul]
+@PART[ROC-ApolloCMBlockIII]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 3000		//Keep this lower to "discourage" attempting reentry without HS
 }
