--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaShieldMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaShieldMoroz.cfg
@@ -53,7 +53,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-DynaShieldMoroz]:FOR[RealismOverhaul]
+@PART[ROC-DynaShieldMoroz]:AFTER[RealismOverhaul]
 {
 	@maxTemp = 1144		//Just solid Rene 41?
 	@skinMaxTemp = 1144
