--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiWing.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiWing.cfg
@@ -198,7 +198,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-GeminiWing]:FOR[RealismOverhaul]
+@PART[ROC-GeminiWing]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
