--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryNoseCap.cfg
@@ -247,7 +247,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-MercuryNoseCapBDB]:FOR[RealismOverhaul]
+@PART[ROC-MercuryNoseCapBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1144
 }
