--- a/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
@@ -350,7 +350,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-OrionCM]:FOR[RealismOverhaul]
+@PART[ROC-OrionCM]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 3600		//Drag cubes are incorrect, and CM takes full heating. Unable to refine further at the moment
 }
