--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
@@ -624,7 +624,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-ApolloCM]:FOR[RealismOverhaul]
+@PART[ROC-ApolloCM]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 3000		//Keep this lower to "discourage" attempting reentry without HS
 }
