--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
@@ -135,7 +135,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-ApolloForwardHS]:FOR[RealismOverhaul]
+@PART[ROC-ApolloForwardHS]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 3000
 }
