--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -411,7 +411,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-CSTCM]:FOR[RealismOverhaul]
+@PART[ROC-CSTCM]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1533
 }
