--- a/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTParachute.cfg
@@ -184,7 +184,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-CSTParachute]:FOR[RealismOverhaul]
+@PART[ROC-CSTParachute]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1533
 }
