--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
@@ -175,7 +175,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-DynaAdapterBigMoroz]:FOR[RealismOverhaul]
+@PART[ROC-DynaAdapterBigMoroz]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1144
 }
