--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaButtMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaButtMoroz.cfg
@@ -265,7 +265,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-DynaButtMoroz]:FOR[RealismOverhaul]
+@PART[ROC-DynaButtMoroz]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
