--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCabinMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCabinMoroz.cfg
@@ -239,7 +239,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-DynaCabinMoroz]:FOR[RealismOverhaul]
+@PART[ROC-DynaCabinMoroz]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
