--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
@@ -375,7 +375,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-DynaCockpitMoroz]:FOR[RealismOverhaul]
+@PART[ROC-DynaCockpitMoroz]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
