--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaElevonMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaElevonMoroz.cfg
@@ -110,7 +110,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-DynaElevonMoroz]:FOR[RealismOverhaul]
+@PART[ROC-DynaElevonMoroz]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
