--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaRudderMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaRudderMoroz.cfg
@@ -106,7 +106,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-DynaRudderMoroz]:FOR[RealismOverhaul]
+@PART[ROC-DynaRudderMoroz]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
