--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaWingMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaWingMoroz.cfg
@@ -171,7 +171,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-DynaWingMoroz]:FOR[RealismOverhaul]
+@PART[ROC-DynaWingMoroz]:AFTER[RealismOverhaul]
 {
 	@maxTemp = 1144
 	@skinMaxTemp = 2000
