--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiFlightPack.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiFlightPack.cfg
@@ -144,7 +144,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-GeminiFlightPack]:FOR[RealismOverhaul]
+@PART[ROC-GeminiFlightPack]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
