--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiFlightPackContSurf.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiFlightPackContSurf.cfg
@@ -129,7 +129,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-GeminiFlightPackContSurf]:FOR[RealismOverhaul]
+@PART[ROC-GeminiFlightPackContSurf]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
