--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiWingContSurf.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiWingContSurf.cfg
@@ -87,7 +87,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-GeminiWingContSurf]:FOR[RealismOverhaul]
+@PART[ROC-GeminiWingContSurf]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000
 }
