--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
@@ -181,7 +181,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-BigGeminiCabinBDB]:FOR[RealismOverhaul]
+@PART[ROC-BigGeminiCabinBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000		//Raising this until we can find a better way to deal with excess heat flux
 }
