--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -81,7 +81,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0.0, 0.0, -0.06
+		DescentModeCoM = 0.0, 0.0, 0.06		//Gemini reentered "upside-down" to protect crew hatches
 	}
 
 	MODULE
@@ -416,7 +416,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-GeminiCMBDB]:FOR[RealismOverhaul]
+@PART[ROC-GeminiCMBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 2000		//Raising this until we can find a better way to deal with excess heat flux
 }
