--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNosecone.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNosecone.cfg
@@ -140,7 +140,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-GeminiNoseconeBDB]:FOR[RealismOverhaul]
+@PART[ROC-GeminiNoseconeBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1273
 }
