--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNoseconeAero.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNoseconeAero.cfg
@@ -90,7 +90,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-GeminiNoseconeAeroBDB]:FOR[RealismOverhaul]
+@PART[ROC-GeminiNoseconeAeroBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1273
 }
