--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiParachute.cfg
@@ -171,7 +171,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-GeminiParachuteBDB]:FOR[RealismOverhaul]
+@PART[ROC-GeminiParachuteBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1273
 }
