--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
@@ -173,7 +173,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-ReentryControlSystemBDB]:FOR[RealismOverhaul]
+@PART[ROC-ReentryControlSystemBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1273
 }
