--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryAirbrake.cfg
@@ -133,7 +133,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-MercuryAirbrakeBDB]:FOR[RealismOverhaul]
+@PART[ROC-MercuryAirbrakeBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1144
 }
