--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -535,7 +535,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-MercuryCMBDB]:FOR[RealismOverhaul]
+@PART[ROC-MercuryCMBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1144
 }
