--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -323,7 +323,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-MercuryRCSBDB]:FOR[RealismOverhaul]
+@PART[ROC-MercuryRCSBDB]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 1144
 }
