--- a/GameData/ROCapsules/PartConfigs/Orion/OrionForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionForwardHS.cfg
@@ -148,7 +148,7 @@ PART
 //	================================================================================
 //	Override RO global settings to get our temperatures back
 //	================================================================================
-@PART[ROC-OrionForwardHS]:FOR[RealismOverhaul]
+@PART[ROC-OrionForwardHS]:AFTER[RealismOverhaul]
 {
 	@skinMaxTemp = 3600		//Drag cubes are ancorrect, and CM takes full heating. Unable to refine further at the moment
 }
